fixed issue where player sprites in game were hiding behind left nav on desktop

--- a/src/components/BattleChessGame/BattleChessManager/PlayerInGameDisplay/PlayerInGameDisplay.css
+++ b/src/components/BattleChessGame/BattleChessManager/PlayerInGameDisplay/PlayerInGameDisplay.css
@@ -14,11 +14,17 @@
   }
 
   @media (min-width: 800px) {
-    font-size: 16px;
+    font-size: 1em;
 
     .playerGameDisplaySprite {
       width: 60px;
       height: 60px;
+    }
+  }
+
+  @media (min-width: 600px) {
+    .playerGameDisplaySprite {
+      padding-left: 80px;
     }
   }
 }
